--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+
+body {
+    @apply bg-gray-700
+}
+
+@tailwind components;
+
+@tailwind utilities;
