--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -39,6 +39,7 @@
     <div class="max-w-2xl mr-5 rounded overflow-hidden shadow-2xl bg-gray-100 my-10 w-full">
         <div class="px-6 py-4">
             <div class="text-xl font-bold mb-4 text-center">Results</div>
+            <div id="uploadResult"></div>
             <div class="flex justify-end">
                 <button class="rounded bg-green-500 mr-2 p-2 text-white hover:bg-green-300">Download Results</button>
             </div>
