--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -28,7 +28,7 @@
         >How to use</a>
     </div>
   </div>
-  <div class="w-full block flex-grow items-center lg:flex lg:w-auto sm:hidden md:hidden">
+  <div class="w-full block flex-grow items-center lg:flex lg:w-auto hidden lg:block">
     <div class="text-sm lg:flex-grow"></div>
     <div>
       <a
