--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,11 +1,11 @@
 <app-navigation></app-navigation>
-<div id="ad-gutter" class="w-3/4 mx-auto">
+<div id="ad-gutter" class="w-full md:w-3/4 lg:w-3/4 mx-auto">
   <div class="mx-auto mb-7 text-center">
     <p class="text-lg text-white">
       Generate random fantasy lineups optimized by Fantasy Points Per Game!
     </p>
   </div>
-  <div class="rounded shadow-2xl bg-gray-100 my-5 mx-10 p-5">
+  <div class="md:rounded lg:rounded shadow-2xl bg-gray-100 mb-2 mt-5 mx-0 md:mx-10 lg:mx-10 p-5">
     <div class="text-xl font-bold mb-4 text-center">Generate Lineups</div>
     <div class="flex justify-between flex-wrap">
       <div class="mx-3">
@@ -85,7 +85,8 @@
       </button>
     </div>
   </div>
-  <div class="rounded shadow-2xl bg-gray-100 my-5 mx-10 p-5">
+  <div id="ad-segment" class="h-px-100"></div>
+  <div class="md:rounded lg:rounded shadow-2xl bg-gray-100 my-2 mx-0 md:mx-10 lg:mx-10 p-5">
     <div class="text-xl font-bold mb-4 text-center">Results</div>
     <div id="uploadResult" *ngFor="let team of teams; index as i">
       <team-display [team]="team" [index]="i"></team-display>
@@ -99,3 +100,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
