slider and responsive

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,7 +3,7 @@
         <h1 class="text-xl text-center font-weight-bold">About</h1>
     </div>
     <div class="flex w-10/12 mx-auto">
-        <p class="mb-4 text-lg">
+        <p class="mb-4 md:text-lg lg:text-lg">
             Daily fantasy lineups can be hard and time-consuming to make if you are trying to max enter
             a contest, or cover your bases for possible outcomes. Infinity Draft was developed to 
             make the process of creating unique lineups easier by generating random lineups, biased
