--- a/src/app/modules/modal/modal.component.html
+++ b/src/app/modules/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="jw-modal w-3/4 mx-auto py-5">
+<div class="jw-modal w-full md:w-3/4 lg:w-3/4 mx-auto py-5 md:rounded lg:rounded">
     <div class="jw-modal-body bg-gray-100 rounded">
         <ng-content></ng-content>
     </div>
