--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
-<div id="ad-gutter" class="w-full md:w-3/4 lg:w-3/4 mx-auto">
+<div id="ad-gutter" class="w-full md:w-3/4 lg:w-3/4 mx-auto mb-10">
   <div class="mx-auto mb-7 text-center">
     <p class="text-lg text-white">
       Generate random fantasy lineups optimized by Fantasy Points Per Game!
@@ -8,7 +8,7 @@
   <div class="md:rounded lg:rounded shadow-2xl bg-gray-100 mb-2 mt-5 mx-0 md:mx-10 lg:mx-10 p-5">
     <div class="text-xl font-bold mb-4 text-center">Generate Lineups</div>
     <div class="flex justify-between flex-wrap">
-      <div class="mx-3">
+      <div class="mx-2">
         <p class="text-sm text-gray-500">Sport</p>
         <select
           id="sport"
@@ -19,17 +19,7 @@
           <option value="soc">SOC</option>
         </select>
       </div>
-      <div class="mx-3">
-        <p class="text-sm text-gray-500">Budget</p>
-        <input
-          id="budget"
-          (change)="changeInput($event, 'budget')"
-          class="bg-white mb-3 focus:outline-none focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 block w-full appearance-none leading-normal"
-          type="number"
-          placeholder="$50,000"
-        />
-      </div>
-      <div class="mx-3">
+      <div class="mx-2">
         <p class="text-sm text-gray-500">Game Type</p>
         <select
           id="game_type"
@@ -40,7 +30,7 @@
           <option value="soc">Classic</option>
         </select>
       </div>
-      <div class="mx-3">
+      <div class="mx-2">
         <p class="text-sm text-gray-500">Number of lineups</p>
         <input
           id="number_of_lineups"
@@ -50,7 +40,13 @@
           placeholder="10"
         />
       </div>
-      <div class="mx-3">
+      <div class="mx-2">
+        <p class="text-sm text-gray-500 mb-2">FPPG Range</p>
+        <div class="flex justify-content-center mt-2">
+          <input type="range" min="0" max="75" value="50" class="slider rounded-full shadow-inner" id="FPPGRange">
+        </div>
+      </div>
+      <div class="mx-2">
         <p class="text-sm text-gray-500">Upload Player CSV</p>
         <div class="custom-file mb-3">
           <form
