--- a/src/app/pages/dashboard-page/dashboard-page.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.component.scss
@@ -28,3 +28,24 @@
 .h-px-100 {
     height: 100px;
 }
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #285e61;
+    border-radius: 50%;
+    cursor: pointer;
+}
